--- a/introemacs.tex
+++ b/introemacs.tex
@@ -421,7 +421,7 @@ indentata.
 
 Per abilitare \emacs{} e \auctex{} a lavorare con la lingua italiana bisogna
 installare il correttore ortografico. Le procedure, poiché differenti, vengono
-di seguito esposte per tutti e tre i sistemi operativi.  L'uso, invece è
+di seguito esposte per tutti e tre i sistemi operativi.  L'uso, invece, è
 invariante.
 
 Per fare una revisione del documento che si sta scrivendo, bisogna premere la
