Modifiche alle opzioni di hyperref, autori elencati per ordine alfabetico (in una precedente modifica)

--- a/biblio.bib
+++ b/biblio.bib
@@ -16,9 +16,9 @@
 }
 
 @MISC{emacsW32:wiki,
-  title  = {EmacsW32},
-  year   = {2011},
-  url    = {http://www.emacswiki.org/emacs/EmacsW32}
+  title  = {Emacs Wiki},
+  year   = {2012},
+  url    = {http://www.emacswiki.org}
 }
 
 @MANUAL{emacs:stallman,
@@ -32,10 +32,10 @@
 
 @MANUAL{auctex:manual,
   title        = {AUC\TeX, A sophisticated \TeX{} environment for Emacs},
-  author       = {Kresten Krab Thorup and Per Abrahamsen and David Kastrup and others},    
+  author       = {Kresten Krab Thorup and Per Abrahamsen and David Kastrup and others},     
   organization = {Free Software Foundation, Inc.},
-  year = {2010},
-  url = {www.gnu.org/software/auctex/manual/auctex.pdf}
+  year         = {2010},
+  url          = {www.gnu.org/software/auctex/manual/auctex.pdf}
 }
 @ARTICLE{emacs:odebari,
   author       = {Onofrio de Bari},
