--- a/preambolo.sty
+++ b/preambolo.sty
@@ -17,7 +17,6 @@
   left=3cm,%
   right=3cm,%
 ]{geometry}
-\RequirePackage{array}
 
 \RequirePackage{marvosym}
 \RequirePackage{graphicx}
@@ -35,7 +34,6 @@
 \fvset{%
   frame=single,%
   fontsize=\small,%
-  %xleftmargin=\the\parindent
 }
 
 \RequirePackage[babel]{csquotes}
@@ -50,7 +48,10 @@
 
 \RequirePackage[%
   unicode,%
+  pdfdisplaydoctitle=true,%
+  pdfstartview=FitH,%
   linktocpage=true,%
+  bookmarksnumbered=true,%
 ]{hyperref}
 \hypersetup{%
   pdftitle  ={\titolo},%
