--- a/preambolo.sty
+++ b/preambolo.sty
@@ -22,6 +22,7 @@
 \RequirePackage{graphicx}
 \RequirePackage{booktabs}
 \RequirePackage{xcolor}
+\RequirePackage{guit}
 
 \RequirePackage[grid]{multicol}
 \setlength{\columnsep}{3.5ex}
