--- a/introemacs.tex
+++ b/introemacs.tex
@@ -702,153 +702,153 @@ aggiungere queste righe al file \emph{.emacs}
 (add-hook 'server-switch-hook 'ns-raise-emacs)
 \end{Verbatim}
 
-\section{Skeleton mode}
-\label{sec:skelmode}
+% \section{Skeleton mode}
+% \label{sec:skelmode}
 
-\subsection{Introduzione}
-\label{skelintro}
+% \subsection{Introduzione}
+% \label{skelintro}
 
-La \emph{skeleton mode} è uno speciale (ma potente) minilinguaggio, scritto in
-Elisp (un dialetto di Lisp) ed incluso di default in \emacs. Maggiori
-informazioni si possono ottenere digitando \verb!C-h i d m Autotype! in \emacs.
+% La \emph{skeleton mode} è uno speciale (ma potente) minilinguaggio, scritto in
+% Elisp (un dialetto di Lisp) ed incluso di default in \emacs. Maggiori
+% informazioni si possono ottenere digitando \verb!C-h i d m Autotype! in \emacs.
 
-La \emph{skeleton mode} permette in maniera molto semplice di crearsi dei
-blocchi di codice (che magari si usano spesso) e di associare a questi una
-combinazione di tasti per richiamarli nel proprio documento. Ad un livello
-successivo, si può anche usare questo linguaggio per creare dei veri e propri
-\emph{templates}. Lo vedremo più avanti.
+% La \emph{skeleton mode} permette in maniera molto semplice di crearsi dei
+% blocchi di codice (che magari si usano spesso) e di associare a questi una
+% combinazione di tasti per richiamarli nel proprio documento. Ad un livello
+% successivo, si può anche usare questo linguaggio per creare dei veri e propri
+% \emph{templates}. Lo vedremo più avanti.
 
-Per semplicità, per mostrarne l'uso, vengono di seguito riportati degli esempi
-presi da una discussione sul forum del \guit; i codici si commentano quasi da
-soli:
-\begin{Verbatim}
-(define-skeleton TeX-dollar-sign-skeleton
-  "Make a pair of dollar"
-  "signs and leave point inside" nil
-  "$"_"$" )
+% Per semplicità, per mostrarne l'uso, vengono di seguito riportati degli esempi
+% presi da una discussione sul forum del \guit; i codici si commentano quasi da
+% soli:
+% \begin{Verbatim}
+% (define-skeleton TeX-dollar-sign-skeleton
+%   "Make a pair of dollar"
+%   "signs and leave point inside" nil
+%   "$"_"$" )
 
-(global-set-key (kbd "C-x e") 'TeX-dollar-sign-skeleton)
-\end{Verbatim}
-e
-\begin{Verbatim}
-(define-skeleton TeX-square-skeleton
-  "Make a pair of square brackets"
-  "and leave point inside" nil
-  "\\[" \n _\n "\\]" )
+% (global-set-key (kbd "C-x e") 'TeX-dollar-sign-skeleton)
+% \end{Verbatim}
+% e
+% \begin{Verbatim}
+% (define-skeleton TeX-square-skeleton
+%   "Make a pair of square brackets"
+%   "and leave point inside" nil
+%   "\\[" \n _\n "\\]" )
 
-(global-set-key (kbd "C-x s") 'TeX-square-skeleton
-\end{Verbatim}
-Nella prima riga si dichiara lo \emph{scheletro} con un nome, che verrà poi
-utilizzato per poterlo richiamare nel codice. Segue quindi una breve descrizione
-(facoltativa ma consigliata), e poi il codice vero e proprio. Infine con
-\verb!global-set-key! viene creata una combinazione di tasti personali per
-richiamare lo \emph{scheletro}.
+% (global-set-key (kbd "C-x s") 'TeX-square-skeleton
+% \end{Verbatim}
+% Nella prima riga si dichiara lo \emph{scheletro} con un nome, che verrà poi
+% utilizzato per poterlo richiamare nel codice. Segue quindi una breve descrizione
+% (facoltativa ma consigliata), e poi il codice vero e proprio. Infine con
+% \verb!global-set-key! viene creata una combinazione di tasti personali per
+% richiamare lo \emph{scheletro}.
 
-% Gli esempi appena mostrati sono veramente semplici e forse se ne potrebbe fare
-% a meno, ma servono per far capire con quanta semplicità si possono
-% \emph{automatizzare} certe operazioni.
+% % Gli esempi appena mostrati sono veramente semplici e forse se ne potrebbe fare
+% % a meno, ma servono per far capire con quanta semplicità si possono
+% % \emph{automatizzare} certe operazioni.
 
-\subsection{Templates}
-\label{sec:skeltempl}
+% \subsection{Templates}
+% \label{sec:skeltempl}
 
-Talvoltà può capitare di dover scrivere documenti che hanno una forma molto
-simile tra loro, o che, all'opposto, utilizziamo così raramente che averne un
-modello \emph{pronto uso} risulterebbe davvero comodo.
+% Talvoltà può capitare di dover scrivere documenti che hanno una forma molto
+% simile tra loro, o che, all'opposto, utilizziamo così raramente che averne un
+% modello \emph{pronto uso} risulterebbe davvero comodo.
 
-Ecco che allora ci viene in mente di creare un file, un \emph{modello di
-  documento} già configurato, da richiamare nel nostro editor preferito.
+% Ecco che allora ci viene in mente di creare un file, un \emph{modello di
+%   documento} già configurato, da richiamare nel nostro editor preferito.
 
-Per \emacs{} esistono diversi pacchetti che consentono di creare
-\emph{template}, ognuno dei quali richiede una installazione. Per fare questo
-possiamo invece avvalerci anche della \emph{skeleton mode} inclusa già in
-\emacs{}.
+% Per \emacs{} esistono diversi pacchetti che consentono di creare
+% \emph{template}, ognuno dei quali richiede una installazione. Per fare questo
+% possiamo invece avvalerci anche della \emph{skeleton mode} inclusa già in
+% \emacs{}.
 
-Supponiamo di voler creare un \emph{modello di lettera} da usare velocemente
-all'occorrenza. Lo \emph{scheletro} di codice che verrà incluso nel documento va
-appunto nel file \emph{.emacs}. Un prototipo semplice potrebbe essere il
-seguente:
+% Supponiamo di voler creare un \emph{modello di lettera} da usare velocemente
+% all'occorrenza. Lo \emph{scheletro} di codice che verrà incluso nel documento va
+% appunto nel file \emph{.emacs}. Un prototipo semplice potrebbe essere il
+% seguente:
 
-\begin{Verbatim}
-(define-skeleton LaTeX-skeleton-letter "Inserts a Latex letter
-skeleton into current buffer.  This only makes sense for empty
-buffers."  "Destinatario: "
-"\\documentclass[a4paper,10pt]{letter}\n"
-"\\usepackage[T1]{fontenc}\n"
-"\\usepackage[utf8]{inputenc}\n"
-"\\usepackage[italian]{babel}\n"
-"\\name{Pinco Pallino}\n"
-"\\address{Via Marco Polo 32\\\\ Napoli 80100\\\\ Italy}\n"
-"\\begin{document}\n"
-"\\begin{letter}{" str | " *** Destinatario  *** " "}\n"
-"\\opening{" _ "}\n\n"
-"\\closing{Cordialmente}\n"
-"\\end{letter}\n"
-"\\end{document}\n")
-\end{Verbatim}
+% \begin{Verbatim}
+% (define-skeleton LaTeX-skeleton-letter "Inserts a Latex letter
+% skeleton into current buffer.  This only makes sense for empty
+% buffers."  "Destinatario: "
+% "\\documentclass[a4paper,10pt]{letter}\n"
+% "\\usepackage[T1]{fontenc}\n"
+% "\\usepackage[utf8]{inputenc}\n"
+% "\\usepackage[italian]{babel}\n"
+% "\\name{Pinco Pallino}\n"
+% "\\address{Via Marco Polo 32\\\\ Napoli 80100\\\\ Italy}\n"
+% "\\begin{document}\n"
+% "\\begin{letter}{" str | " *** Destinatario  *** " "}\n"
+% "\\opening{" _ "}\n\n"
+% "\\closing{Cordialmente}\n"
+% "\\end{letter}\n"
+% "\\end{document}\n")
+% \end{Verbatim}
 
-Come già detto dopo aver dichiarato il nome dello \emph{scheletro} seguono una o
-due (o a piacere) righe di commento. La riga:
-\begin{Verbatim}
-"Destinatario: "
-\end{Verbatim}
-è una riga di prompt che userà il \emph{minibuffer} per interagire con l'utente
-quando verrà letto (o trovato) il simbolo \verb!str! nel codice; il valore
-inserito dall'utente verrà proprio sostituito a \verb!str!.
+% Come già detto dopo aver dichiarato il nome dello \emph{scheletro} seguono una o
+% due (o a piacere) righe di commento. La riga:
+% \begin{Verbatim}
+% "Destinatario: "
+% \end{Verbatim}
+% è una riga di prompt che userà il \emph{minibuffer} per interagire con l'utente
+% quando verrà letto (o trovato) il simbolo \verb!str! nel codice; il valore
+% inserito dall'utente verrà proprio sostituito a \verb!str!.
 
-Il simbolo '\_' indica la posizione dove verrà posto il cursore quando il codice
-\emph{skeleton} è completamente inserito.
+% Il simbolo '\_' indica la posizione dove verrà posto il cursore quando il codice
+% \emph{skeleton} è completamente inserito.
 
-Il codice che si vuole inserire va sempre tra due doppi apici, i comandi vanno
-preceduti da un \emph{backslash} e per ritornare a capo si usa \verb!\n!.
+% Il codice che si vuole inserire va sempre tra due doppi apici, i comandi vanno
+% preceduti da un \emph{backslash} e per ritornare a capo si usa \verb!\n!.
 
-Infine, come precedentemente detto, si può richiamare il \emph{codice pronto
-  uso} con una combinazione di tasti personale, ad esempio se si vuole usare la
-combinazione \verb!C-c l!, bisogna scrivere nel file \emph{.emacs}:
-\begin{Verbatim}
-(global-set-key "\C-cl" 'LaTeX-skeleton-letter)
-\end{Verbatim}
+% Infine, come precedentemente detto, si può richiamare il \emph{codice pronto
+%   uso} con una combinazione di tasti personale, ad esempio se si vuole usare la
+% combinazione \verb!C-c l!, bisogna scrivere nel file \emph{.emacs}:
+% \begin{Verbatim}
+% (global-set-key "\C-cl" 'LaTeX-skeleton-letter)
+% \end{Verbatim}
 
-Ulteriori approfondimenti (oltre a quelli a cui si perviene con
-\verb!C-h i d m Autotype!) si possono reperire on-line alla pagina di
-riferimento (
-\href{http://www.emacswiki.org/emacs/SkeletonMode}{Skeleton Mode}).
+% Ulteriori approfondimenti (oltre a quelli a cui si perviene con
+% \verb!C-h i d m Autotype!) si possono reperire on-line alla pagina di
+% riferimento (
+% \href{http://www.emacswiki.org/emacs/SkeletonMode}{Skeleton Mode}).
 
-\section{Reference Card}
-\label{sec:refcard}
+% \section{Reference Card}
+% \label{sec:refcard}
 
-Oltre alla vasta documentazione che si può reperire in rete ed ai
-manuali ufficiali, di particolare utilità sono le \emph{Reference
-  Card}, disponibili sia per \emacs{}, sia per \auctex{}.
+% Oltre alla vasta documentazione che si può reperire in rete ed ai
+% manuali ufficiali, di particolare utilità sono le \emph{Reference
+%   Card}, disponibili sia per \emacs{}, sia per \auctex{}.
 
-Si tratta di un elenco delle principali funzionalità e dei comandi a
-queste associate per poter, all'occorrenza, ricordare e trovare
-velocemente quello che serve.
+% Si tratta di un elenco delle principali funzionalità e dei comandi a
+% queste associate per poter, all'occorrenza, ricordare e trovare
+% velocemente quello che serve.
 
-Il tutto è riportato in maniera ordinata e concisa in una sorta di
-forma tabulare, eventualmente da stampare, e tenere a portata di mano
-sulla propria scrivania.
+% Il tutto è riportato in maniera ordinata e concisa in una sorta di
+% forma tabulare, eventualmente da stampare, e tenere a portata di mano
+% sulla propria scrivania.
 
-Le reference card sono disponibili sia in rete, sia sul proprio
-computer una volta installati \emacs{} ed \auctex. Sul proprio
-computer dovrebbero esserci anche i sorgenti pronti per essere
-compilati.
+% Le reference card sono disponibili sia in rete, sia sul proprio
+% computer una volta installati \emacs{} ed \auctex. Sul proprio
+% computer dovrebbero esserci anche i sorgenti pronti per essere
+% compilati.
 
-\begin{figure}[t]
- \centering
- \unitlength=0.005\textwidth
- \begin{picture}(200,120)
-  \put(0,0){\framebox(94,120){%
-   \includegraphics[width=0.51\textwidth]{refemacs}}}
-  \put(95,0){\rotatebox{90}{\tiny Immagine estratta da
-   \href{http://www.ps.uni-saarland.de/courses/prog-ws10/downloads/emacs_re
-     fcard.pdf}{GNU Emacs Reference Card}}}
-  \put(100,0){\framebox(94,120){%
-   \includegraphics[width=0.51\textwidth]{refauctex}}}
-  \put(195,0){\rotatebox{90}{\tiny Immagine estratta da
-   \href{http://devcheatsheet.com/static/pdf/auctex-ref.pdf}{AUC\TeX{}
-     Reference Card}}}
-  \end{picture}
-\end{figure}
+% \begin{figure}[t]
+%  \centering
+%  \unitlength=0.005\textwidth
+%  \begin{picture}(200,120)
+%   \put(0,0){\framebox(94,120){%
+%    \includegraphics[width=0.51\textwidth]{refemacs}}}
+%   \put(95,0){\rotatebox{90}{\tiny Immagine estratta da
+%    \href{http://www.ps.uni-saarland.de/courses/prog-ws10/downloads/emacs_re
+%      fcard.pdf}{GNU Emacs Reference Card}}}
+%   \put(100,0){\framebox(94,120){%
+%    \includegraphics[width=0.51\textwidth]{refauctex}}}
+%   \put(195,0){\rotatebox{90}{\tiny Immagine estratta da
+%    \href{http://devcheatsheet.com/static/pdf/auctex-ref.pdf}{AUC\TeX{}
+%      Reference Card}}}
+%   \end{picture}
+% \end{figure}
 
 \section{Conclusioni}
 \label{sec:fine}
