--- a/preambolo.sty
+++ b/preambolo.sty
@@ -44,7 +44,7 @@
 \newcommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
 \newcommand{\autoreb}{Orlando Iovino}
 \newcommand{\autorea}{Mosè Giordano}
-\newcommand{\autorec}{\textcolor{red}{matteo.l}} % manca nome e cognome
+\newcommand{\autorec}{Matteo Leccardi} % manca nome e cognome
 \newcommand{\autori}{\autorea, \autoreb, \autorec}
 
 \RequirePackage[%
