Cambio font (TeX Gyre collection

--- a/preambolo.sty
+++ b/preambolo.sty
@@ -5,9 +5,14 @@
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[english,italian]{babel}
 
-\renewcommand{\rmdefault}{ptm}
-\RequirePackage[scaled=0.890]{helvet}
-\RequirePackage[scaled=0.850]{beramono}
+% Caratteri
+\usepackage{tgtermes}            %[Serif Fonts]
+\usepackage[scale=0.85]{tgheros} %[Sans Serif Fonts]
+\usepackage{tgcursor}            %[Typewriter Fonts]
+
+% \renewcommand{\rmdefault}{ptm}
+% \RequirePackage[scaled=0.890]{helvet}
+% \RequirePackage[scaled=0.850]{beramono}
 \RequirePackage{microtype}
 
 \RequirePackage[%
