Modificato record O.de Bari

--- a/biblio.bib
+++ b/biblio.bib
@@ -47,5 +47,5 @@
   month	       = {10},
   language     = {italian},
   issn	       = {1828-2350},
-  url	       = {http://www.guit.sssup.it/arstexnica/}
+  url	       = {http://www.guitex.org/home/it/numero-2}
 }
